<resources>
    <string name="triangle">triangle</string>
    <string name="app_name">GeometricSolver</string>
    <string name="item1">Choose Problem</string>
    <string name="item2">Formulae</string>
    <string name="item3">About</string>
    <string name="a_b_180">a + b = 180°</string>
    <string name="a_b_d_c">A = B, D =C</string>
    <string name="_1_3_5_7">∠1 = ∠3 = ∠5 = ∠7</string>
    <string name="a_b">a ⟂ b</string>
    <string name="lines">Lines</string>
    <string name="triangles_are_equal_by">Triangles are equal by:</string>
    <string name="_2_4_6_8">∠2 = ∠4 = ∠6 = ∠8</string>
    <string name="_1_two_side_and_angle">1) Two side and angle</string>
    <string name="_2_two_angles_and_side">2) Two angles and side</string>
    <string name="_3_three_sides">3) Three sides</string>
    <string name="triangles_are_similar_by">Triangles are similar by :</string>
    <string name="right_triangle">Right triangle</string>
    <string name="isosceles_triangle">Isosceles triangle</string>
    <string name="_1_two_angles">1) Two angles</string>
    <string name="a_b_c_nce_ae_be_ncb_eb_ab_nac_ae_ab">a² + b² = c²\nCE² = AE * BE\nCB² = EB*AB\nAC² = AE*AB</string>
    <string name="general_formulas">General formulas</string>
    <string name="p_a_b_c_2_ns_pr_0_5_h_a_p_p_a_p_b_p_c_n_sin_sin_sin_n_2r_n_a_b_c_na_b_c_2ab_cos">p=(a+b+c)/2\nS = pr = 0.5 * h * a = √(p*(p-a)*(p-b)*(p-c))\nsinα/a = sinβ/b = sinγ/c = 2R \na² = b² + c² -2ab*cosα</string>
    <string name="angles">angles</string>
    <string name="ab_bc_0_5_ac_cosa">AB = BC = 0.5 * AC * cosA</string>
    <string name="r_a_2_3_nr_a_3_nr_2r">r = a/2√3 \nR=a/√3\nR=2r</string>
    <string name="types_of_triangles">Types of Triangles :</string>
    <string name="equilateral_triangle">Equilateral triangle</string>
    <string name="todo">TODO</string>
    <string name="_2_two_sides_and_angle_beteween_them">2) Two sides and angle between them</string>
    <string name="triangles">Triangles</string>
    <string name="Triangles">Triangles</string>
    <string name="r">R =</string>
    <string name="r2">r =</string>
    <string name="a">a =</string>
    <string name="solution">Solution :</string>
    <string name="empty"> </string>
    <string name="dot">.</string>
    <string name="Squareroot">√</string>
    <string name="downArrow">↓</string>
    <string name="upArrow">↑</string>
    <string name="zero">0</string>
    <string name="nine">9</string>
    <string name="BraceLeft">(</string>
    <string name="BraceRight">)</string>
    <string name="Eight">8</string>
    <string name="Seven">7</string>
    <string name="Six">6</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Five">5</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="delete">Delete</string>
    <string name="solve">Solve</string>
    <string name="r1">r =</string>
    <string name="none">none</string>
    <string name="invalid_math_input">INVALID MATH INPUT"</string>
    <string name="invalid_input">INVALID INPUT"</string>
    <string name="b">b =</string>
    <string name="c">c =</string>
    <string name="beta">β =</string>
    <string name="gamma">γ =</string>
    <string name="alpha">α =</string>
    <string name="a1">a1 =</string>
    <string name="b1">b1 =</string>
    <string name="c1">c1 =</string>
    <string name="k">k =</string>
    <string name="theorems">Theorems</string>
    <string name="parallelograms">Figures</string>
    <string name="square">Square</string>
    <string name="d">d =</string>
    <string name="p">P =</string>
    <string name="s">S =</string>
    <string name="dear_users_welcome_to_this_application_the_application_is_an_assistant_for_solving_geometric_problems_pleasant_use_n_nif_you_find_any_bugs_please_notify_the_developer_n_nthe_author_of_the_application_varga_vladimir">Dear users, welcome to this application.The app is an assistant for solving geometric problems. Pleasant use.\n\nIf you find any bugs, please notify the developer.\n\nThe author of the application Varga Vladimir.</string>
    <string name="n">n =</string>
    <string name="α">∠α =</string>
    <string name="more_content_coming">MORE CONTENT IS COMING</string>
    <string name="banner_ad_unit_id">ca-app-pub-5814028506169648/4234646872</string>
    <string name="welcome">Dear user, welcome to Geometric Solver. To solve problems, click on the enter field, use keyboard to enter numbers, and click in solve button. Pleasant use.</string>

    <string name="Formula1">Equal triangles</string>
    <string name="Formula1_description">Triangles are equal by\n1)Two sides and angle\n2)Two angles and side\n3)Three sides</string>

    <string name="Formula2">Similar triangles</string>
    <string name="Formula2_description">Triangles are similar by\n1)Two proportional sides and angle\n2)Two angles\n3)Three proportionals sides</string>

    <string name="Formula3"> Equilateral triangle</string>
    <string name="Formula3_description">r = a/2√3 \nR=a/√3\nR=2r</string>

    <string name="Formula4">Isosceles triangle</string>
    <string name="Formula4_description">AB = BC = 0.5 * AC * cosA</string>

    <string name="Formula5">Right Triangle</string>
    <string name="Formula5_description">a² + b² = c²\nCE² = AE * BE\nCB² = EB*AB\nAC² = AE*AB</string>

    <string name="Formula6">Area formulas</string>
    <string name="Formula6_description">p=(a+b+c)/2\nS = pr = 0.5 * h * a = √(p*(p-a)*(p-b)*(p-c))</string>

    <string name="Formula7">Sin theorem</string>
    <string name="Formula7_description">sinα/a = sinβ/b = sinγ/c = 2R</string>

    <string name="Formula8">Cos theorem</string>
    <string name="Formula8_description">a² = b² + c² -2ab*cosα</string>





</resources>