<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <Button
        android:id="@+id/keyboard_buttonDelete"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/delete"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/keyboard_buttonSquareRoot"
        app:layout_constraintStart_toStartOf="@+id/keyboard_buttonDot"
        app:layout_constraintTop_toBottomOf="@+id/keyboard_buttonDot"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_buttonDownArrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/downArrow"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/keyboard_button9"
        app:layout_constraintStart_toEndOf="@+id/keyboard_button9"
        app:layout_constraintTop_toTopOf="@+id/keyboard_button9"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_button9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/nine"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/keyboard_button8"
        app:layout_constraintStart_toEndOf="@+id/keyboard_button8"
        app:layout_constraintTop_toTopOf="@+id/keyboard_button8"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_button8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Eight"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/keyboard_button7"
        app:layout_constraintStart_toEndOf="@+id/keyboard_button7"
        app:layout_constraintTop_toTopOf="@+id/keyboard_button7"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_button7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Seven"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/keyboard_button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/keyboard_button4"
        app:layout_constraintTop_toBottomOf="@+id/keyboard_button4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_buttonSquareRoot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Squareroot"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/keyboard_buttonDot"
        app:layout_constraintStart_toEndOf="@+id/keyboard_buttonDot"
        app:layout_constraintTop_toTopOf="@+id/keyboard_buttonDot"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_buttonDot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/dot"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/keyboard_buttonOpenBrace"
        app:layout_constraintStart_toStartOf="@+id/keyboard_buttonOpenBrace"
        app:layout_constraintTop_toBottomOf="@+id/keyboard_buttonOpenBrace"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_button0"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/zero"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/keyboard_button6"
        app:layout_constraintStart_toEndOf="@+id/keyboard_button6"
        app:layout_constraintTop_toTopOf="@+id/keyboard_button6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_button6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Six"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/keyboard_button5"
        app:layout_constraintStart_toEndOf="@+id/keyboard_button5"
        app:layout_constraintTop_toTopOf="@+id/keyboard_button5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_button5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Five"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/keyboard_button4"
        app:layout_constraintStart_toEndOf="@+id/keyboard_button4"
        app:layout_constraintTop_toTopOf="@+id/keyboard_button4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_button4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Four"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/keyboard_button1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/keyboard_button1"
        app:layout_constraintTop_toBottomOf="@+id/keyboard_button1"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_buttonCloseBrace"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/BraceRight"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/keyboard_buttonOpenBrace"
        app:layout_constraintStart_toEndOf="@+id/keyboard_buttonOpenBrace"
        app:layout_constraintTop_toTopOf="@+id/keyboard_buttonOpenBrace"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_buttonOpenBrace"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/BraceLeft"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/keyboard_buttonUpArrow"
        app:layout_constraintStart_toEndOf="@+id/keyboard_buttonUpArrow"
        app:layout_constraintTop_toTopOf="@+id/keyboard_buttonUpArrow"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_buttonUpArrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/upArrow"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/keyboard_button3"
        app:layout_constraintStart_toEndOf="@+id/keyboard_button3"
        app:layout_constraintTop_toTopOf="@+id/keyboard_button3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_button3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Three"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/keyboard_button2"
        app:layout_constraintStart_toEndOf="@+id/keyboard_button2"
        app:layout_constraintTop_toTopOf="@+id/keyboard_button2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_button2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Two"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/keyboard_button1"
        app:layout_constraintStart_toEndOf="@+id/keyboard_button1"
        app:layout_constraintTop_toTopOf="@+id/keyboard_button1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/keyboard_button1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/One"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>