<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".TriangleCalculator2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/Triangles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/button_triangle" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/solve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculator2_editText_c"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/calculator2_editText_a"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/montserrat"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/calculation2_textView1"
        android:maxLength="8"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/calculation2_textView1"
        app:layout_constraintStart_toEndOf="@+id/calculation2_textView1"
        app:layout_constraintTop_toTopOf="@+id/calculation2_textView1"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/calculator2_editText_1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/montserrat"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/calculation2_textView4"
        android:maxLength="8"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/calculation2_textView4"
        app:layout_constraintStart_toEndOf="@+id/calculation2_textView4"
        app:layout_constraintTop_toTopOf="@+id/calculation2_textView4"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/calculator2_editText_2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/montserrat"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/calculation2_textView5"
        android:maxLength="8"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/calculation2_textView5"
        app:layout_constraintStart_toEndOf="@+id/calculation2_textView5"
        app:layout_constraintTop_toTopOf="@+id/calculation2_textView5"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/calculator2_editText_3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/montserrat"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/calculation2_textView6"
        android:maxLength="8"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/calculation2_textView6"
        app:layout_constraintStart_toEndOf="@+id/calculation2_textView6"
        app:layout_constraintTop_toTopOf="@+id/calculation2_textView6"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/calculator2_editText_b"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/montserrat"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/calculation2_textView2"
        android:maxLength="8"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/calculation2_textView2"
        app:layout_constraintStart_toEndOf="@+id/calculation2_textView2"
        app:layout_constraintTop_toTopOf="@+id/calculation2_textView2"
        app:layout_constraintVertical_bias="0.48"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/calculator2_editText_c"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/montserrat"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/calculation2_textView3"
        android:maxLength="8"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/calculation2_textView3"
        app:layout_constraintStart_toEndOf="@+id/calculation2_textView3"
        app:layout_constraintTop_toTopOf="@+id/calculation2_textView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/calculation2_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/a"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/calculation2_textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/alpha"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/calculator2_editText_a"
        app:layout_constraintStart_toEndOf="@+id/calculator2_editText_a"
        app:layout_constraintTop_toTopOf="@+id/calculator2_editText_a"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/calculation2_textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/beta"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/calculation2_textView4"
        app:layout_constraintStart_toStartOf="@+id/calculation2_textView4"
        app:layout_constraintTop_toBottomOf="@+id/calculation2_textView4"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/calculation2_textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/gamma"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/calculation2_textView5"
        app:layout_constraintStart_toStartOf="@+id/calculation2_textView5"
        app:layout_constraintTop_toBottomOf="@+id/calculation2_textView5"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/calculation2_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/b"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/calculation2_textView1"
        app:layout_constraintStart_toStartOf="@+id/calculation2_textView1"
        app:layout_constraintTop_toBottomOf="@+id/calculation2_textView1"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/calculation2_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/c"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/calculation2_textView2"
        app:layout_constraintStart_toStartOf="@+id/calculation2_textView2"
        app:layout_constraintTop_toBottomOf="@+id/calculation2_textView2"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>