<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ParallelogramCalculator1">

    <ImageView
        android:id="@+id/parallegram_calculator1_imageView1"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/square"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/button_square_test" />

    <TextView
        android:id="@+id/parallegram_calculator1_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/a"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/parallegram_calculator1_imageView1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/parallegram_calculator1_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/d"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/parallegram_calculator1_textView1"
        app:layout_constraintStart_toStartOf="@+id/parallegram_calculator1_textView1"
        app:layout_constraintTop_toBottomOf="@+id/parallegram_calculator1_textView1"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/parallegram_calculator1_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/p"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/parallegram_calculator1_textView2"
        app:layout_constraintStart_toStartOf="@+id/parallegram_calculator1_textView2"
        app:layout_constraintTop_toBottomOf="@+id/parallegram_calculator1_textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/parallegram_calculator1_textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/s"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/parallegram_calculator1_textView3"
        app:layout_constraintStart_toEndOf="@+id/parallegram_calculator1_imageView1"
        app:layout_constraintTop_toBottomOf="@+id/parallegram_calculator1_textView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:linksClickable="true"
        android:hint="@string/empty"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:id="@+id/parallegram_calculator1_editTextA"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:cursorVisible="false"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/parallegram_calculator1_textView1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/parallegram_calculator1_textView1"
        app:layout_constraintStart_toEndOf="@+id/parallegram_calculator1_textView1"
        app:layout_constraintTop_toTopOf="@+id/parallegram_calculator1_textView1"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:linksClickable="true"
        android:hint="@string/empty"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:id="@+id/parallegram_calculator1_editTextD"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:cursorVisible="false"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/parallegram_calculator1_textView2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/parallegram_calculator1_textView2"
        app:layout_constraintStart_toEndOf="@+id/parallegram_calculator1_textView2"
        app:layout_constraintTop_toTopOf="@+id/parallegram_calculator1_textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:linksClickable="true"
        android:hint="@string/empty"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:id="@+id/parallegram_calculator1_editTextP"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:cursorVisible="false"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/parallegram_calculator1_textView3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/parallegram_calculator1_textView3"
        app:layout_constraintStart_toEndOf="@+id/parallegram_calculator1_textView3"
        app:layout_constraintTop_toTopOf="@+id/parallegram_calculator1_textView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:linksClickable="true"
        android:hint="@string/empty"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:id="@+id/parallegram_calculator1_editTextS"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:cursorVisible="false"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/parallegram_calculator1_textView4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/parallegram_calculator1_textView4"
        app:layout_constraintStart_toEndOf="@+id/parallegram_calculator1_textView4"
        app:layout_constraintTop_toTopOf="@+id/parallegram_calculator1_textView4"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/parallegram_calculator1_solutionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttton_style"
        android:text="@string/solve"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parallegram_calculator1_imageView1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/parallegram_calculator1_answerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parallegram_calculator1_solutionButton" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parallegram_calculator1_keyboard"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>